--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,18 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
+	
 
+<build>
+      <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.2.2</version>
+        </plugin>
+    </plugins>
+    <finalName>check</finalName>
+  </build>
 
 	<dependencies>
 		<dependency>
